--- a/index.html
+++ b/index.html
@@ -9,5 +9,21 @@
 
 <body>
 	<h1>Book Field</h1>
+	<div class="form-box">
+	<input type="text" class="search-field"
+		   placeholder="Search">
+		<button class="search-btn"
+				type="button">Search</button>
+	</div>
+	<nav>
+		<a href="#">New Releases</a>
+		<a href="#">Book Merchandise</a>
+		<a href="#">Events</a>
+	
+	</nav>
+	
+	<h2>Spooky Tales</h2>
+
 </body>
+
 </html>
