--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				type="button">Search</button>
 	</div>
 	<nav>
-		<a href="#">New Releases</a>
+		<a href="../New Releases/New Releases.html">New Releases</a>
 		<a href="#">Book Merchandise</a>
 		<a href="#">Events</a>
 	
