--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 	</div>
 	<nav>
 		<a href="../New Releases/New Releases.html">New Releases</a>
-		<a href="#">Book Merchandise</a>
-		<a href="#">Events</a>
+		<a href="../Book Merchandise/Book Merchandise.html">Book Merchandise</a>
+		<a href="../Events/Events.html">Events</a>
 	
 	</nav>
 	
